--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body {
 }
 
 h1 {
-    font-size: 86px;
+    font-size: 5rem;
     margin-bottom: 0%;
     color: #3E8E7E;
 }
 
 h2 {
-    /* font-size: 36px; */
+    font-size: 2rem;
     margin-top: 0%;
 }
 
@@ -35,17 +35,27 @@ h2 {
     margin-top: 1%;
 }
 
-#chi {
-    width: 45%;
+.pic {
     position: absolute;
+    margin: auto;
+    top: 20%;
     left: 50%;
     transform: translate(-50%);
-    top: 8%;
 }
+
+/* #chi { */
+    /* width: 20%; */
+    /* position: absolute; */
+    /* top: auto; */
+    /* left: 50%; */
+    /* transform: translate(-50%); */
+    /* top: 8%; */
+/* }  */
+
 
 .foot {
     position: absolute;
-    top: 100%;
+    top: 90%;
     left: 50%;
     transform: translate(-50%);
 }
